fixed blog post nowrap

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -209,7 +209,7 @@ div.card {
   padding: 4px;
   display: flex;
 
-  a, span, p {
+  a, span {
       white-space: nowrap;
   }
 
